--- a/config/database.yml
+++ b/config/database.yml
@@ -88,7 +88,7 @@ production:
   # Require non-blank DATABASE_URL so we never fall back to Unix socket (which fails on Railway)
   primary: &primary_production
     <<: *default
-    url: <%= (url = ENV["DATABASE_URL"].to_s.strip).present? ? url : (raise "Set DATABASE_URL in Railway Variables (use Reference → your Postgres service → DATABASE_URL)") %>
+    url: <%= ENV["DATABASE_URL"].to_s.strip.presence %>
     database: sublens_app_production
     username: sublens_app
     password: <%= ENV["SUBLENS_APP_DATABASE_PASSWORD"] %>
